cambios de documentacion

--- a/bienvenida/inventario/templates/inventario/base.html
+++ b/bienvenida/inventario/templates/inventario/base.html
@@ -7,11 +7,14 @@
         {% block title %} | Sitio{% endblock %}
     </title>
 </head>
+<header>
+    TITULO DE LA PAGINA BASE
+</header>
 <body>
     {% block content %}
     {% endblock %}
     <footer>
-        <p>&copy; 2023 Mi Sitio. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Mi Sitio. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
