--- a/bienvenida/inventario/templates/inventario/crear-producto.html
+++ b/bienvenida/inventario/templates/inventario/crear-producto.html
@@ -13,9 +13,11 @@
         <input type="text" id="nombre" name="nombre" required><br><br>
         <label for="precio">Precio:</label>
         <input type="number" id="precio" name="precio" step="0.01" required><br><br>
-        <label for="descripcion">Descripción:</label>
-        <textarea id="descripcion" name="descripcion" required></textarea><br><br>
-        <button type="submit">Ingresar</button>
+    <label for="descripcion">Descripción:</label>
+    <textarea id="descripcion" name="descripcion" required></textarea><br><br>
+    <label for="stock">Stock:</label>
+    <input type="number" id="stock" name="stock" required><br><br>
+    <button type="submit">Ingresar</button>
     </form>
 </body>
 </html>
